@@ -29,8 +29,9 @@ ubuntu-dev-tools (0.109) UNRELEASED; urgency=low
     - Default to a temporary workdir and clean it up (LP: #691467).
     - Fix 'str' object has no attribute 'startwith' crash caused by a typo.
     - Fix crash if uploading to ubuntu without building the package before.
+    - Fix: The package was only uploaded if the target was "ubuntu".
 
- -- Benjamin Drung <bdrung@ubuntu.com>  Wed, 22 Dec 2010 12:52:56 +0100
+ -- Benjamin Drung <bdrung@ubuntu.com>  Wed, 22 Dec 2010 13:38:36 +0100
 
 ubuntu-dev-tools (0.108) experimental; urgency=low
 
